2010-03-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am:
	* security.c[pp]: Rename to .cpp to compile with g++.

2010-03-01  Alan McGovern  <amcgovern@novell.com>

	* grid.cpp: Make Grid::CreateMatrices a bit smarter - it only
	  generates the array if the dimensions differ or the array
	  hasn't been generated already.

2010-03-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* window.cpp: Remove unused file.

2010-03-01  Alan McGovern  <amcgovern@novell.com>

	* value.h.in:
	* dependencyproperty.cpp: Add a Value::IsNull which checks for
	  a null pointer or that Value::GetIsNull returns true.

2010-02-26  Jeffrey Stedfast  <fejj@novell.com>

	* ptr.h: #undef ds

2010-02-26  Andreia Gaita  <avidigal@novell.com>

	* mms-downloader.cpp: if we're using the curl bridge, set all
	custom headers via SetHeader and not via the SetBody hack
	* runtime.[h|cpp]: add new "curlbridge" env var to enable
	the curl bridge at runtime (disabled by default)	

2010-02-26  Andreia Gaita  <avidigal@novell.com>

	* timemanager.cpp: On RemoveTickCall, if the call isn't on the tick
	list, it could be because it was added on AddDispatcherCall on the
	current tick, which means it hasn't been copied to the tick list yet,
	so we need to check and remove from the dispatcher list as well.

2010-02-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* audio-pulse.cpp: Add some initialization timing to check if this is
	why our test #111 times out once in a while on the bots.

2010-02-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp|h: Make InternString return a const char* so it's
	clear (even for the compiler) that the caller shouldn't free it. NULL
	out the interned hash table when destroyed so that it's not re-freed if
	Dispose is called again.

	* xaml.h: Make resource_base a const char* so that it's clear we
	shouldn't free it.

2010-02-25  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.cpp: If the last ref to the object is