@@ -111,6 +111,7 @@ static MoonlightRuntimeOption options [] = {
 	{ RUNTIME_INIT_EMULATE_KEYCODES,      "emulatekeycodes", "yes",        "no",     true,              "Emulate Windows PlatformKeyCodes" },
 	{ RUNTIME_INIT_ENABLE_EFFECTS,        "effects",         "yes",        "no",     true,              "Enable Pixel Effects" },
 	{ RUNTIME_INIT_CURL_BRIDGE,           "curlbridge",      "yes",        "no",     true,              "Enable Curl bridge" },
+	{ RUNTIME_INIT_ENABLE_TOGGLEREFS,     "togglerefs",      "yes",        "no" },
 	{ (RuntimeInitFlag)0 }
 
 };
@@ -145,8 +146,8 @@ moonlight_get_runtime_option (RuntimeInitFlag flag)
 	return moonlight_flags & flag;
 }
 
-#define RUNTIME_INIT_DESKTOP (RuntimeInitFlag)(RUNTIME_INIT_PANGO_TEXT_LAYOUT | RUNTIME_INIT_RENDER_FRONT_TO_BACK | RUNTIME_INIT_USE_UPDATE_POSITION | RUNTIME_INIT_USE_SHAPE_CACHE | RUNTIME_INIT_USE_IDLE_HINT | RUNTIME_INIT_USE_BACKEND_IMAGE | RUNTIME_INIT_ALL_IMAGE_FORMATS | RUNTIME_INIT_OUT_OF_BROWSER | RUNTIME_INIT_DESKTOP_EXTENSIONS | RUNTIME_INIT_ENABLE_EFFECTS)
-#define RUNTIME_INIT_BROWSER (RuntimeInitFlag)(RUNTIME_INIT_RENDER_FRONT_TO_BACK | RUNTIME_INIT_USE_UPDATE_POSITION | RUNTIME_INIT_USE_SHAPE_CACHE | RUNTIME_INIT_ALLOW_WINDOWLESS | RUNTIME_INIT_USE_IDLE_HINT | RUNTIME_INIT_USE_BACKEND_IMAGE | RUNTIME_INIT_ENABLE_MS_CODECS | RUNTIME_INIT_CREATE_ROOT_DOMAIN | RUNTIME_INIT_ENABLE_EFFECTS)
+#define RUNTIME_INIT_DESKTOP (RuntimeInitFlag)(RUNTIME_INIT_PANGO_TEXT_LAYOUT | RUNTIME_INIT_RENDER_FRONT_TO_BACK | RUNTIME_INIT_USE_UPDATE_POSITION | RUNTIME_INIT_USE_SHAPE_CACHE | RUNTIME_INIT_USE_IDLE_HINT | RUNTIME_INIT_USE_BACKEND_IMAGE | RUNTIME_INIT_ALL_IMAGE_FORMATS | RUNTIME_INIT_OUT_OF_BROWSER | RUNTIME_INIT_DESKTOP_EXTENSIONS | RUNTIME_INIT_ENABLE_EFFECTS | RUNTIME_INIT_ENABLE_TOGGLEREFS )
+#define RUNTIME_INIT_BROWSER (RuntimeInitFlag)(RUNTIME_INIT_RENDER_FRONT_TO_BACK | RUNTIME_INIT_USE_UPDATE_POSITION | RUNTIME_INIT_USE_SHAPE_CACHE | RUNTIME_INIT_ALLOW_WINDOWLESS | RUNTIME_INIT_USE_IDLE_HINT | RUNTIME_INIT_USE_BACKEND_IMAGE | RUNTIME_INIT_ENABLE_MS_CODECS | RUNTIME_INIT_CREATE_ROOT_DOMAIN | RUNTIME_INIT_ENABLE_EFFECTS | RUNTIME_INIT_ENABLE_TOGGLEREFS )
 
 #if DEBUG || LOGGING
 static struct MoonlightDebugOption debugs[] = {
